*** 20010810_3 by leeh
- cleanup of serveropts, as per dracus' patch


*** 20010810_2 by leeh
- added documentation for TS5


*** 20010810_1 by leeh
- wrapped TS5 in #ifdef's
  I need to add doc/ts5.txt later


*** 20010806_2 by leeh
- added a special case exception for juped channels.
  if the channel is juped, and has no users, always use the incoming TS,
  even if its older, else if a channel is juped on a hub, youll get a TS
  desync


*** 20010806_1 by wcampbel
Corrected typos (from dracus)


*** 20010805_9 by db
- make NON_REDUNDANT_KLINES always on, removed #define for it



*** 20010805_8 by leeh
- removed some debugging symbols


*** 20010805_7 by leeh
- dont allow duplicate IP klines


*** 20010805_6 by leeh
- fixed unkline to remove tkline ips


*** 20010805_5 by jdc
- Minor cleanups.


*** 20010805_4 by jdc
- Pure cosmetical changes; "#undef " became "#undef  ", removed excessive
  whitespace from end of lines, and minor definition changes.


*** 20010805_3 by leeh
- moved reason = parv[2]; up a step


*** 20010805_2 by jdc
- Removed unused variables in m_gline().
- Extra () to define truth in invalid_wildcard().
- Renamed 'local' to 'local_client' to avoid shadowing in invalid_gline().


*** 20010805_1 by leeh
- removed some #if 0'd code that doesnt need to be there


*** 20010804_2 by leeh
- changed some defaults


*** 20010804_1 by leeh
- we are now TS5
- added a doc describing the protocol changes
- TS5 will do the following:
  - TS rules are *always* obeyed, whether the channel is opless or not,
    whereas TS3 would allow ops from a channel merge on an opless channel,
    TS5 will NOT do this, the oldest channel will always win
  - this behaviour is NOT a define, we cant support backward compatibility
    now, so supporting it 6 months on doesnt make sense


*** 20010803_1 by leeh
- extended the check in get_client_name to cover handshaking/connecting
  servers


*** 20010731_1 by lusky
test commit to new repository


*** 20010729_1 by db